# ZziPpu

./: .gitignore  README.md  docker-compose.yml  render.yaml  start.sh
auth-service/: .env.example  Dockerfile  README.md  pyproject.toml
auth-service/app/: config.py  main.py
auth-service/app/application/interfaces/: caregiver_redeem_client.py
auth-service/app/application/use_cases/auth/: redeem_invite_code.py  request_email_otp.py  verify_email_otp.py
auth-service/app/application/use_cases/terms/: agree_terms.py  get_active_terms.py
auth-service/app/content/terms/: privacy_policy_v1.md  service_terms_v1.md
auth-service/app/domain/repositories/: email_otp_repository.py  terms_repository.py  user_repository.py
auth-service/app/infrastructure/auth/: jwt_handler.py
auth-service/app/infrastructure/core_client/: caregiver_redeem_client_impl.py
auth-service/app/infrastructure/email/: console_email.py  factory.py  resend_email.py
auth-service/app/infrastructure/persistence/: database.py
auth-service/app/infrastructure/persistence/models/: __init__.py  email_otp_model.py  term_model.py  user_model.py
auth-service/app/infrastructure/persistence/repositories/: email_otp_repository_impl.py  terms_repository_impl.py  user_repository_impl.py
auth-service/app/infrastructure/terms/: seed.py  terms_checker_impl.py
auth-service/app/presentation/: dependencies.py
auth-service/app/presentation/api/v1/: auth_router.py  code_router.py  router.py  (+1 more)
auth-service/app/presentation/middleware/: error_handler.py
auth-service/app/presentation/schemas/: terms_schema.py
(+722 files in other folders)
